<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainInterfac2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/inicio2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="50dp"
            android:text="@string/InicioSession"
            android:textAlignment="center"
            android:textColorLink="#525050"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="name"
            android:background="@drawable/butonplas"
            android:ems="10"
            android:hint="@string/usuariowww"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#E7E1E1"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="name"
            android:background="@drawable/butonplas"
            android:ems="10"
            android:hint="@string/contarsea"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#F4F3F3"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/butonplas"
            android:text="@string/butonIngr"
            android:textAlignment="center"
            android:textColorLink="#A6976F"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:text="@string/olvidoContr"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>