<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pa1sss"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp"
        tools:ignore="DuplicateIds">

        <TextView
            android:id="@+id/Titulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/caliste"
            android:lineSpacingExtra="10sp"
            android:text="@string/iniciarsesion"
            android:textAlignment="center"
            android:textColor="#292A26"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/image"
            android:layout_width="151dp"
            android:layout_height="125dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/logo"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="367dp"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/butonplas"
            android:text="@string/Inicio"
            android:textAlignment="center"
            android:textColorLink="#575454" />

        <Button
            android:id="@+id/button2"
            android:layout_width="372dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/butonplas"
            android:text="@string/Registrar"
            android:textAlignment="center"
            android:textColorLink="#6D6666" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>